// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox test should errored with disabled classes 1`] = `
<div>
  <label
    class="sc-hLBbgP dBDxxq"
  >
    <div
      class="sc-eDvSVe iGAIsb"
    >
      <input
        class="sc-iBYQkv jgRTsF"
        type="checkbox"
      />
      <div
        class="sc-jSUZER gKloHQ"
      />
      <div
        class="sc-gKPRtg fdqAzt"
      >
        <svg
          aria-hidden="true"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 12.75l6 6 9-13.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox test should render 1`] = `
<div>
  <label
    class="sc-hLBbgP dBDxxq"
  >
    <div
      class="sc-eDvSVe eDpqpU"
    >
      <input
        class="sc-iBYQkv jgRTsF"
        type="checkbox"
      />
      <div
        class="sc-jSUZER heCVYM"
      />
      <div
        class="sc-gKPRtg glUsyk"
      >
        <svg
          aria-hidden="true"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 12.75l6 6 9-13.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox test should render with disabled classes 1`] = `
<div>
  <label
    class="sc-hLBbgP bwQUxR"
    disabled=""
  >
    <div
      class="sc-eDvSVe eDpqpU"
    >
      <input
        class="sc-iBYQkv jgRTsF"
        disabled=""
        type="checkbox"
      />
      <div
        class="sc-jSUZER dmuXTk"
        disabled=""
      />
      <div
        class="sc-gKPRtg WOArv"
        disabled=""
      >
        <svg
          aria-hidden="true"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 12.75l6 6 9-13.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;
